--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,60 @@
-body{
-font-family: 'IBM Plex Sans', sans-serif;
-font-family: 'Lora', serif;
+body {
+  background-color: black;
+}
+
+h2 {
+  font-family: "IBM Plex Sans", sans-serif;
+  color: hsl(347, 93%, 65%);
+}
+
+h1 {
+  display: block;
+  font-family: "Josefin Sans", sans-serif;
+  text-align: center;
+  font-size: 4.5rem;
+  font-weight: 500;
+  color: antiquewhite;
+  margin: auto;
+}
+
+.header_avatar {
+  display: inline;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  margin-right: 0.5rem;
+}
+
+.header_avatar:hover {
+  color: deeppink;
+}
+
+.header_description {
+  color: hwb(347 33% 2%);
+  text-align: center;
+}
+
+.btn {
+  display: inline-block;
+
+  font-weight: 400;
+  line-height: 1.5;
+  color: hwb(347 33% 2%);
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  cursor: pointer;
+  border: 1px solid transparent;
+}
+
+.btn-branding {
+  display: block;
+  text-align: center;
+  background: hwb(347 33% 2%);
+  border-radius: 4px;
+  color: white;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
+  margin-top: 156px;
 }
