--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,6 +5,7 @@ body {
 h2 {
   font-family: "IBM Plex Sans", sans-serif;
   color: hsl(347, 93%, 65%);
+  
 }
 
 h1 {
@@ -15,6 +16,12 @@ h1 {
   font-weight: 500;
   color: antiquewhite;
   margin: auto;
+}
+
+p{
+  color: white;
+  font-size: 20px;
+  line-height: 1.7;
 }
 
 .header_avatar {
@@ -36,7 +43,6 @@ h1 {
 
 .btn {
   display: inline-block;
-
   font-weight: 400;
   line-height: 1.5;
   color: hwb(347 33% 2%);
@@ -48,13 +54,29 @@ h1 {
 }
 
 .btn-branding {
-  display: block;
-  text-align: center;
-  background: hwb(347 33% 2%);
-  border-radius: 4px;
-  color: white;
+  padding: 15px 30px;
+  line-height: 27px;
+  border: 1px solid hwb(347 33% 2%);
   font-size: 18px;
   line-height: 27px;
-  padding: 15px 30px;
-  margin-top: 156px;
 }
+.btn-branding:hover{
+  color: white;
+}
+
+.header_yogurt{
+  display: block;
+  text-align: center;
+  margin-bottom: 5px;
+  border-radius: 4px;
+}
+
+.btn-branding-outline{
+  padding: 15px 30px;
+  line-height: 27px;
+  border: 1px solid hwb(347 33% 2%);
+  font-size: 18px;
+  line-height: 27px;
+  text-align: center;
+}
+
